--- a/BSModManager/Views/MainWindow.xaml
+++ b/BSModManager/Views/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
-        Title="{Binding Title}" Height="700" Width="1200" MinHeight="400" MinWidth="800">
+        Title="{Binding Title}" Height="700" Width="1250" MinHeight="400" MinWidth="800">
     <DockPanel>
         <DockPanel DockPanel.Dock="Left">
             <Button Content="Main" Command="{Binding ShowMainTabViewCommand}" CommandParameter="MainTab" Margin="10" Height="70" Width="70" DockPanel.Dock="Top"/>
@@ -13,9 +13,11 @@
             <TextBlock Text=""/>
         </DockPanel>
         <DockPanel DockPanel.Dock="Bottom">
-            <Button Content="Install/Update" Width="100" Margin="10"  Padding="10" DockPanel.Dock="right"/>
-            <Button Content="Mod Info" Width="100" Margin="10"  Padding="10" DockPanel.Dock="right"/>
-            <TextBlock Text="{Binding Console}" Background="LightGray" Margin="0 10 10 10" Padding="10" FontSize="20"/>
+            <Button Content="Install/Update" Width="100" Margin="5 5 10 10"  Padding="5" Background="Red" Foreground="White" DockPanel.Dock="right" IsEnabled="{Binding InstallButtonEnable}"/>
+            <Button Content="All Checked&#xa;/Unchecked" Width="100" Margin="5 5 5 10" Padding="5" Background="Orange" DockPanel.Dock="right" IsEnabled="{Binding AllCheckedButtonEnable}"/>
+            <Button Content="Mod Repository" Width="100" Margin="5 5 5 10"  Padding="5" DockPanel.Dock="right" IsEnabled="{Binding ModRepositoryButtonEnable}"/>
+            <Button Content="Change URL" Width="100" Margin="5 5 5 10" Padding="5" Background="LightGoldenrodYellow" DockPanel.Dock="right" IsEnabled="{Binding ChangeUrlButtonEnable}"/>
+            <TextBlock Text="{Binding Console}" Background="LightGray" Margin="0 5 10 10" Padding="10" FontSize="20"/>
         </DockPanel>
         <ContentControl Margin="0 10 10 10" prism:RegionManager.RegionName="ContentRegion" />
     </DockPanel>
