--- a/BSModManager/Views/MainWindow.xaml
+++ b/BSModManager/Views/MainWindow.xaml
@@ -9,15 +9,15 @@
             <Button Content="Main" Command="{Binding ShowMainTabViewCommand}" CommandParameter="MainTab" Margin="10" Height="70" Width="70" DockPanel.Dock="Top"/>
             <Button Content="Settings" Command="{Binding ShowSettingsTabViewCommand}" CommandParameter="SettingsTab" Margin="10 0 10 10" Width="70" Height="70" DockPanel.Dock="Top"/>
             <TextBlock Text="{Binding MyselfVersion}" FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" Margin="5 5 5 10" DockPanel.Dock="Bottom"/>
-            <TextBlock Text="{Binding GameVersion}" FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" Margin="5" DockPanel.Dock="Bottom"/>
+            <TextBlock Text="{Binding GameVersion.Value}" FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" Margin="5" DockPanel.Dock="Bottom"/>
             <TextBlock Text=""/>
         </DockPanel>
         <DockPanel DockPanel.Dock="Bottom">
             <Button Content="Install/Update" Width="100" Margin="5 5 10 10"  Padding="5" Background="Red" Foreground="White" DockPanel.Dock="right" IsEnabled="{Binding InstallButtonEnable}"/>
-            <Button Content="All Checked&#xa;/Unchecked" Width="100" Margin="5 5 5 10" Padding="5" Background="Orange" DockPanel.Dock="right" IsEnabled="{Binding AllCheckedButtonEnable}"/>
+            <Button Content="All Checked&#xa;/Unchecked" Width="100" Margin="5 5 5 10" Padding="5" Background="Orange" DockPanel.Dock="right" IsEnabled="{Binding AllCheckedButtonEnable}" Command="{Binding AllCheckedButtonCommand}"/>
             <Button Content="Mod Repository" Width="100" Margin="5 5 5 10"  Padding="5" DockPanel.Dock="right" IsEnabled="{Binding ModRepositoryButtonEnable}"/>
             <Button Content="Change URL" Width="100" Margin="5 5 5 10" Padding="5" Background="LightGoldenrodYellow" DockPanel.Dock="right" IsEnabled="{Binding ChangeUrlButtonEnable}"/>
-            <TextBlock Text="{Binding Console}" Background="LightGray" Margin="0 5 10 10" Padding="10" FontSize="20"/>
+            <TextBlock Text="{Binding Console.Value}" Background="LightGray" Margin="0 5 10 10" Padding="10" FontSize="20"/>
         </DockPanel>
         <ContentControl Margin="0 10 10 10" prism:RegionManager.RegionName="ContentRegion" />
     </DockPanel>
