--- a/BSModManager/App.xaml
+++ b/BSModManager/App.xaml
@@ -1,8 +1,8 @@
-﻿<prism:PrismApplication x:Class="ModManager.App"
+﻿<prism:PrismApplication x:Class="BSModManager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	     xmlns:prism="http://prismlibrary.com/"
-             xmlns:local="clr-namespace:ModManager">
+             xmlns:local="clr-namespace:BSModManager">
     <Application.Resources>
          
     </Application.Resources>
