MAの情報取得を実装

--- a/BSModManager/Views/ChangeModInfo.xaml
+++ b/BSModManager/Views/ChangeModInfo.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <Grid VerticalAlignment="Center" Height="110" Width="500">
+    <Grid VerticalAlignment="Center" Height="125" Width="500">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
@@ -23,31 +23,31 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="90"/>
                 <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+            <Border Margin="0 0 0 5"  Grid.Column="0">
+                <Label Content="Original" HorizontalAlignment="Center"></Label>
+            </Border>
+            <Border Margin="0 0 0 5" Grid.Column="0" Grid.ColumnSpan="2">
+                <CheckBox IsChecked="{Binding Original.Value}" HorizontalAlignment="Center" VerticalAlignment="Center"></CheckBox>
+            </Border>
+        </Grid>
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="90"/>
+                <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="auto"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
             <Label Content="URL" HorizontalAlignment="Center" Grid.Column="0"></Label>
-            <TextBox Text="{Binding Url.Value}" TextAlignment="Left" VerticalContentAlignment="Center" Grid.Column="1"></TextBox>
+            <TextBox Text="{Binding Url.Value}" TextAlignment="Left" VerticalContentAlignment="Center" Grid.Column="1" IsReadOnly="{Binding ExistInMA.Value}"></TextBox>
             <Button Content="Search" Grid.Column="2" Margin="0 0 10 0" Padding="5 0 5 0" Command="{Binding SearchMod}"></Button>
         </Grid>
-        <Grid Grid.Row="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="90"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-            </Grid.RowDefinitions>
-            <Border Margin="0 5 0 0"  Grid.Column="0">
-                <Label Content="Original" HorizontalAlignment="Center"></Label>
-            </Border>
-            <Border Margin="0 5 0 0" Grid.Column="0" Grid.ColumnSpan="2">
-                <CheckBox IsChecked="{Binding Original.Value}" HorizontalAlignment="Center" VerticalAlignment="Center"></CheckBox>
-            </Border>
-        </Grid>
-        <Grid Grid.Row="3" Margin="5">
+        <Grid Grid.Row="3" Margin="15">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="auto"/>
