バックアップ機能と終了確認機能を追加

--- a/BSModManager/Views/MainWindow.xaml
+++ b/BSModManager/Views/MainWindow.xaml
@@ -26,5 +26,8 @@
         <i:EventTrigger EventName="Loaded">
             <i:InvokeCommandAction Command="{Binding LoadedCommand}" />
         </i:EventTrigger>
+        <i:EventTrigger EventName="Closing">
+            <i:InvokeCommandAction Command="{Binding ClosingCommand}" />
+        </i:EventTrigger>
     </i:Interaction.Triggers>
 </Window>
