--- a/BSModManager/Views/InitialSetting.xaml
+++ b/BSModManager/Views/InitialSetting.xaml
@@ -3,8 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <Grid VerticalAlignment="Center" Height="79" Width="500">
+    <Grid VerticalAlignment="Center" Height="110" Width="500">
         <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
@@ -43,7 +44,24 @@
             <PasswordBox x:Name="GitHubToken" VerticalContentAlignment="Center" Grid.Column="2"></PasswordBox>
             <Button Content="Verify" Command="{Binding VerifyGitHubTokenCommand}" CommandParameter="{Binding ElementName=GitHubToken}" Width="40"  Grid.Column="3" />
         </Grid>
-        <Grid Grid.Row="2" Margin="5">
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="90"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="auto"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+            <Label Content="Install Directroy" Grid.Column="0"></Label>
+            <Border Background="LightGray" BorderBrush="Gray" BorderThickness="1" Width="25" Grid.Column="1">
+                <TextBlock Text="{Binding VerifyMAExe.Value}" TextAlignment="Center" VerticalAlignment="Center" Foreground="{Binding VerifyMAExeColor.Value}" Width="25" ></TextBlock>
+            </Border>
+            <TextBox Text="{Binding MAExePath.Value}" VerticalContentAlignment="Center" Grid.Column="2"></TextBox>
+            <Button Content="..." Command="{Binding SelectMAExeCommand}" Width="40"  Grid.Column="3" />
+        </Grid>
+        <Grid Grid.Row="3" Margin="5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
