--- a/BSModManager/Views/SettingsTab.xaml
+++ b/BSModManager/Views/SettingsTab.xaml
@@ -14,6 +14,8 @@
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
@@ -48,7 +50,7 @@
                 <DockPanel>
                     <DockPanel DockPanel.Dock="Left">
                         <Border Background="White" BorderBrush="Gray" BorderThickness="1" Width="25">
-                            <TextBlock Text="{Binding VerifyBSFolder.Value}" TextAlignment="Center" VerticalAlignment="Center" Foreground="{Binding VerifyBSFolderColor.Value}" ></TextBlock>
+                            <TextBlock Text="{Binding VerifyBSFolder.Value}" TextAlignment="Center" VerticalAlignment="Center" Foreground="{Binding VerifyBSFolderColor.Value}" FontSize="16"></TextBlock>
                         </Border>
                     </DockPanel>
                     <TextBlock
@@ -93,7 +95,7 @@
             BorderThickness="1">
                 <DockPanel DockPanel.Dock="Left">
                     <Border Background="White" BorderBrush="Gray" BorderThickness="1" Width="25">
-                        <TextBlock Text="{Binding VerifyGitHubToken.Value}" TextAlignment="Center" VerticalAlignment="Center" Foreground="{Binding VerifyGitHubTokenColor.Value}" ></TextBlock>
+                        <TextBlock Text="{Binding VerifyGitHubToken.Value}" TextAlignment="Center" VerticalAlignment="Center" Foreground="{Binding VerifyGitHubTokenColor.Value}" FontSize="16" ></TextBlock>
                     </Border>
                     <PasswordBox
                     x:Name="GitHubToken"
@@ -118,7 +120,52 @@
             CommandParameter="{Binding ElementName=GitHubToken}"
             Command="{Binding ChangeToken}"/>
             <TextBlock
-            Grid.Row="5"
+                Grid.Row="5"
+                Margin="5"
+                HorizontalAlignment="Left"
+                FontSize="16"
+                FontWeight="Bold"
+                Text="ModAssistant.exe" />
+            <Border
+            Grid.Row="6"
+            Grid.ColumnSpan="2"
+            Height="30"
+            MinWidth="450"
+            Margin="5"
+            Background="LightGray"
+            BorderThickness="1">
+                <DockPanel>
+                    <DockPanel DockPanel.Dock="Left">
+                        <Border Background="White" BorderBrush="Gray" BorderThickness="1" Width="25">
+                            <TextBlock Text="{Binding VerifyMAExe.Value}" TextAlignment="Center" VerticalAlignment="Center" Foreground="{Binding VerifyMAExeColor.Value}" FontSize="16" ></TextBlock>
+                        </Border>
+                    </DockPanel>
+                    <TextBlock
+                    Margin="5"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    FontSize="16"
+                    Text="{Binding MAExePath.Value}" />
+                </DockPanel>
+            </Border>
+            <Button
+            Grid.Row="6"
+            Grid.Column="2"
+            Height="30"
+            Margin="5"
+            Padding="5"
+            Content="Select Exe"
+            Command="{Binding SelectMAExe}"/>
+            <Button
+            Grid.Row="6"
+            Grid.Column="3"
+            Height="30"
+            Margin="5"
+            Padding="5"
+            Content="Open MA Folder"
+            Command="{Binding OpenMAFolder}"/>
+            <TextBlock
+            Grid.Row="7"
             Grid.Column="0"
             Margin="50,5,5,5"
             HorizontalAlignment="Left"
@@ -127,21 +174,21 @@
             Text="Get Prerelease(Unimplemented)"
             Foreground="Gray"/>
             <CheckBox
-            Grid.Row="5"
+            Grid.Row="7"
             Grid.Column="1"
             HorizontalAlignment="Center"
             VerticalAlignment="Center" 
             IsEnabled="False"/>
             <TextBlock
                 Text="Diagnostic"
-                Grid.Row="6"
+                Grid.Row="8"
                 Grid.Column="0"
                 Margin="15,5,5,5"
                 HorizontalAlignment="Left"
                 FontSize="24"
                 FontWeight="Bold"/>
             <StackPanel 
-            Grid.Row="7"
+            Grid.Row="9"
             Grid.Column="0"
             Orientation="Horizontal">
                 <Button
