--- a/BSModManager/Views/MainWindow.xaml
+++ b/BSModManager/Views/MainWindow.xaml
@@ -7,18 +7,32 @@
         Title="{Binding Title}" Height="700" Width="1400" MinHeight="400" MinWidth="800">
     <DockPanel>
         <DockPanel DockPanel.Dock="Left">
-            <Button Content="Update" Command="{Binding ShowUpdateTabViewCommand}" CommandParameter="UpdateTab" Margin="10" Height="70" Width="70" DockPanel.Dock="Top"/>
-            <Button Content="Install" Command="{Binding ShowInstallTabViewCommand}" CommandParameter="InstallTab" Margin="10 0 10 10" Height="70" Width="70" DockPanel.Dock="Top"/>
-            <Button Content="Settings" Command="{Binding ShowSettingsTabViewCommand}" CommandParameter="SettingsTab" Margin="10 0 10 10" Width="70" Height="70" DockPanel.Dock="Top"/>
+            <Button Command="{Binding ShowUpdateTabViewCommand}" CommandParameter="UpdateTab" Margin="10" Height="70" Width="70" DockPanel.Dock="Top">
+                <Image Source="Resources/Update.png" Width="40"/>
+            </Button>
+            <Button Command="{Binding ShowInstallTabViewCommand}" CommandParameter="InstallTab" Margin="10 0 10 10" Height="70" Width="70" DockPanel.Dock="Top">
+                <Image Source="Resources/Install.png" Width="40"/>
+            </Button>
+            <Button Command="{Binding ShowSettingsTabViewCommand}" CommandParameter="SettingsTab" Margin="10 0 10 10" Width="70" Height="70" DockPanel.Dock="Top">
+                <Image Source="Resources/Setting.png" Width="40"/>
+            </Button>
             <TextBlock Text="{Binding MyselfVersion}" FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" Margin="5 5 5 10" DockPanel.Dock="Bottom"/>
             <TextBlock Text="{Binding GameVersion.Value}" FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" Margin="5" DockPanel.Dock="Bottom"/>
             <TextBlock Text=""/>
         </DockPanel>
         <DockPanel DockPanel.Dock="Bottom">
-            <Button Content="{Binding UpdateOrInstall}" Width="100" Margin="5 5 10 10"  Padding="5" Background="Red" Foreground="White" DockPanel.Dock="right" IsEnabled="{Binding InstallButtonEnable}"/>
-            <Button Content="All Checked&#xa;/Unchecked" Width="100" Margin="5 5 5 10" Padding="5" Background="Orange" DockPanel.Dock="right" IsEnabled="{Binding AllCheckedButtonEnable}" Command="{Binding AllCheckedButtonCommand}"/>
-            <Button Content="Mod Repository" Width="100" Margin="5 5 5 10"  Padding="5" Background="LightGoldenrodYellow" DockPanel.Dock="right" IsEnabled="{Binding ModRepositoryButtonEnable}" Command="{Binding ModRepositoryButtonCommand}"/>
-            <Button Content="Change Mod Info" Width="100" Margin="5 5 5 10" Padding="5" DockPanel.Dock="right" IsEnabled="{Binding ChangeModInfoButtonEnable}" Command="{Binding ChangeModInfoButtonCommand}"/>
+            <Button Width="100" Margin="5 5 10 10"  Padding="5" Background="OrangeRed" Foreground="White" DockPanel.Dock="right" IsEnabled="{Binding InstallButtonEnable}">
+                <Image Source="Resources/Execute.png" Width="30"/>
+            </Button>
+            <Button Width="100" Margin="5 5 5 10" Padding="5" Background="Orange" DockPanel.Dock="right" IsEnabled="{Binding AllCheckedButtonEnable}" Command="{Binding AllCheckedButtonCommand}">
+                <Image Source="Resources/Check.png" Width="30"/>
+            </Button>
+            <Button Width="100" Margin="5 5 5 10"  Padding="5" Background="LightGoldenrodYellow" DockPanel.Dock="right" IsEnabled="{Binding ModRepositoryButtonEnable}" Command="{Binding ModRepositoryButtonCommand}">
+                <Image Source="URL.png" Width="30"/>
+            </Button>
+            <Button Width="100" Margin="5 5 5 10" Padding="5" DockPanel.Dock="right" IsEnabled="{Binding ChangeModInfoButtonEnable}" Command="{Binding ChangeModInfoButtonCommand}">
+                <Image Source="Resources/ChangeData.png" Width="30"/>
+            </Button>
             <TextBlock Text="{Binding Console.Value}" Background="LightGray" Margin="0 5 10 10" Padding="10" FontSize="20"/>
         </DockPanel>
         <ContentControl Margin="0 10 10 10" prism:RegionManager.RegionName="ContentRegion" />
