--- a/BSModManager/Views/MainWindow.xaml
+++ b/BSModManager/Views/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:prism="http://prismlibrary.com/"
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         prism:ViewModelLocator.AutoWireViewModel="True"
-        Title="{Binding Title}" Height="700" Width="1400" MinHeight="400" MinWidth="800">
+        Title="{Binding Title}" Height="700" Width="1450" MinHeight="400" MinWidth="800">
     <DockPanel>
         <DockPanel DockPanel.Dock="Left">
             <Button Command="{Binding ShowUpdateTabViewCommand}" CommandParameter="UpdateTab" Margin="10" Height="70" Width="70" DockPanel.Dock="Top">
@@ -26,7 +26,7 @@
                 </ToolTipService.ToolTip>
             </Button>
             <TextBlock Text="{Binding MyselfVersion}" FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" Margin="5 5 5 10" DockPanel.Dock="Bottom"/>
-            <TextBlock Text="{Binding GameVersion.Value}" FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" Margin="5" DockPanel.Dock="Bottom"/>
+            <TextBlock Text="{Binding DisplayedGameVersion}" FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" Margin="5" DockPanel.Dock="Bottom"/>
             <TextBlock Text=""/>
         </DockPanel>
         <DockPanel DockPanel.Dock="Bottom">
